@@ -1,5 +1,10 @@
 2000-10-20  Chema Celorio  <chema@celorio.com>
 
+	* search.c (gedit_replace_all_execute): I need to write 100 pages
+	of "I shall not use unsigned numbers ..."
+
+2000-10-20  Chema Celorio  <chema@celorio.com>
+
 	* search.c (gedit_search_execute): kill a warning
 	(gedit_replace_all_execute): fix a stupid crash
 
